--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "browser-sync": "^2.27.11",
+    "google-maps-review-scraper": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
@@ -18,13 +19,13 @@
     "cssnano": "^7.1.0",
     "express": "^4.18.2",
     "fancy-log": "^2.0.0",
-    "sharp": "^0.33.2",
     "gulp-newer": "^1.4.0",
     "gulp-postcss": "^10.0.0",
     "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "postcss": "^8.5.6",
     "rollup": "^4.18.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "sharp": "^0.33.2"
   }
 }
